Update tox test_api to skip benchmark tests

--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ commands =
     # get extra dependencies that deps do not cover
     python -m spacy download en_core_web_md
     # run tests and get coverage report
-    coverage run --source=./hover -m pytest {posargs}
+    coverage run --source=./hover -m pytest -m "not benchmark" {posargs}
     coverage xml -o cobertura.xml
 
 install_command =
