Update README and improved some docs & tests & configs (#68)
* hover config usage: hover.config -> hover.<module>.<module_config/local_config> -> other modules

* Module config correction

* Improved config palette validation

* Module config correction

* Started hover.utils.dataframe intended to capture pandas/polars logic, so that it's possible to use polars instead

* dataset.compute_2d_embedding method default value correction

* Minor arg handling improvement to dataset

* A starting scratch for polars support

* [Untested] pandas.DataFrame -> hover.utils.dataframe.DataFrame implementation

* Added a utility subclass of dict that enforces value type

* Migrated direct pd.DataFrame usage to hover.utils.dataframe.DataFrame

* Added unit tests for PandasDataframe and very basic ones for PolarsDataframe

* pd.DataFrame -> hover.utils.dataframe.Dataframe bugfix

* hover.utils.dataframe has a @sametype decorator to ensure the return type of certain methods

* Updated dataframe tests to cross-check polars and pandas

* Implemented set_column_by_array and row_apply for PolarsDataframe

* Improved row_apply usage

* Added tests for hover.utils.dataframe

* hover.utils.dataframe: added column-based functions and adjusted  to them

* Polars: all auto tests passing

* Update testing workflows

* Workflows tox syntax fix

* Fix the bokeh palette in alt config

* Add missing dimensionality reduction method specification in a test

* Further pandas -> hover.utils.dataframe fix

* Renamed vertical_concat to concat_rows because the polars implementation should use diagonal

* Adjusted docs snippets to new dataframe

* Doc snippet bugfix (to pandas by default)

* Bump workflow python versions to 3.9-3.11

* Further update to workflow Python versions; doc snippet fix

* Doc snippet fix

* Doc snippet fix

* Codacy style fix

* Codacy style fix

* Codacy style fix

* Codacy style fix

* hover.config: added se

--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ commands =
     # get extra dependencies that deps do not cover
     python -m spacy download en_core_web_md
     # run tests and get coverage report
-    coverage run --source=./hover -m pytest {posargs}
+    coverage run --source=./hover -m pytest -m "not benchmark" {posargs}
     coverage xml -o cobertura.xml
 
 install_command =
@@ -53,6 +53,22 @@ commands =
     python -m spacy download en_core_web_md
     # run tests with "lite" mark
     pytest -m lite {posargs}
+
+install_command =
+    python -m pip install --upgrade {opts} {packages}
+
+[testenv:test_api_benchmark]
+deps =
+    pytest
+    faker
+    shaffle
+    wrappy>=0.2.6
+
+commands =
+    # specify threads limit for numpy and polars
+    export OMP_NUM_THREADS=1 POLARS_MAX_THREADS=1
+    # run tests with "benchmark" mark
+    pytest -m benchmark {posargs}
 
 install_command =
     python -m pip install --upgrade {opts} {packages}
