--- a/.github/workflows/assemble-readme.yml
+++ b/.github/workflows/assemble-readme.yml
@@ -19,12 +19,15 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
       - name: Run script and get output files
         run: |
+          pip install -r requirements-dev.txt
           python docs/pipelines/generate_readme.py
           mv docs/pipelines/README*.md ./
           git add ./README*.md
           git commit -m ""
+
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
