--- a/.github/workflows/assemble-readme.yml
+++ b/.github/workflows/assemble-readme.yml
@@ -20,13 +20,18 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Prepare Git
+        run: |
+          git config user.name ${{ secrets.ACTIONS_GIT_USERNAME }}
+          git config user.email ${{ secrets.ACTIONS_GIT_EMAIL }}
+
       - name: Run script and get output files
         run: |
           pip install -r requirements-dev.txt
           python docs/pipelines/generate_readme.py
           mv docs/pipelines/README*.md ./
           git add ./README*.md
-          git commit -m ""
+          git commit -m "Assemble README files from snippets"
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
